--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Search nearby recreation facilities."/>
+    <Button
+        android:id="@+id/shareButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="share on Google+"/>
 
 </LinearLayout>
 
