--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -33,8 +33,19 @@
       android:text="@string/select_image"
       android:layout_marginTop="8dp"
       android:layout_marginBottom="16dp"
-      android:paddingLeft="24dp"
+      android:paddingLeft="10dp"
       android:paddingRight="24dp"
       />
+    <Button
+        android:id="@+id/camera_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#3d88ec"
+        android:text="@string/take_image"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        />
 
 </LinearLayout>
