--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -9,43 +9,52 @@
   <ImageView
       android:id="@+id/image_view"
       android:layout_width="match_parent"
-      android:layout_height="100dp"
-      android:layout_weight="1"
+      android:layout_height="200dp"
       android:scaleType="centerCrop"
       android:contentDescription="@string/user_image"/>
 
-  <TextView
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/button_view">
+
+    </TableLayout>
+
+    <TextView
       android:id="@+id/text_view"
       android:textColor="#fff"
       android:textSize="16sp"
       android:gravity="center"
       android:padding="16dp"
       android:layout_width="match_parent"
-      android:layout_height="100dp"
-      android:layout_weight="0.4"
-      />
+      android:layout_height="50dp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
+        >
   <Button
       android:id="@+id/select_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:background="#3d88ec"
       android:text="@string/select_image"
-      android:layout_marginTop="8dp"
-      android:layout_marginBottom="16dp"
-      android:paddingLeft="10dp"
-      android:paddingRight="24dp"
+
+      android:layout_gravity="bottom|center_horizontal"
+      android:layout_weight="1"
       />
+
     <Button
         android:id="@+id/camera_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#3d88ec"
         android:text="@string/take_image"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_weight="1"
         />
-
+</LinearLayout>
 </LinearLayout>
