--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -56,5 +56,14 @@
         android:layout_gravity="bottom|center_horizontal"
         android:layout_weight="1"
         />
-</LinearLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Confirm"
+            android:id="@+id/confirm_button"
+            android:background="#3d88ec"
+            android:layout_gravity="bottom|center_horizontal"
+            android:layout_weight="1" />
+    </LinearLayout>
 </LinearLayout>
