--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,13 @@
         android:layout_gravity="center"
         android:text="share on Google+"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test"
+        android:id="@+id/testB"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
 
 
