--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,8 @@
         android:layout_height="wrap_content"
         android:text="Test"
         android:id="@+id/testB"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:onClick="open_LogIn" />
 
 </LinearLayout>
 
