--- a/demo/src/main/res/layout/cardview_community_details.xml
+++ b/demo/src/main/res/layout/cardview_community_details.xml
@@ -16,9 +16,8 @@
         <ImageView
             android:id="@+id/foodImg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerCrop"
-            android:src="@drawable/launcher" />
+            android:layout_height="300dp"
+            android:scaleType="centerCrop" />
         <TextView
             android:id="@+id/titleTxt"
             android:layout_width="wrap_content"
