--- a/app/src/main/res/layout/activity_recognition.xml
+++ b/app/src/main/res/layout/activity_recognition.xml
@@ -14,22 +14,20 @@
       android:contentDescription="@string/user_image"/>
 
 
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/button_view">
-
-    </TableLayout>
-
     <TextView
-      android:id="@+id/text_view"
-      android:textColor="#fff"
-      android:textSize="16sp"
-      android:gravity="center"
-      android:padding="16dp"
-      android:layout_width="match_parent"
-      android:layout_height="150dp" />
+
+        android:layout_width="83dp"
+        android:layout_height="44dp"
+        android:text="New Text"
+        android:id="@+id/counter"
+        android:layout_gravity="center_horizontal" />
+
+    <LinearLayout
+        android:id="@+id/button_view"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="285dp"
+        android:layout_gravity="center_horizontal"></LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
