--- a/app/src/main/res/layout/activity_confirm_page.xml
+++ b/app/src/main/res/layout/activity_confirm_page.xml
@@ -10,19 +10,44 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="357dp"
-        android:text="New Text"
-        android:id="@+id/confirm_data"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_weight="0.09" />
+        android:layout_height="100dp"
+        android:id="@+id/textView"
+        android:layout_weight="1" />
 
     <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Fruits and veggies"
+            android:id="@+id/fruit_and_veggie"
+            android:textSize="20dp" />
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sweet drink"
+            android:id="@+id/sweet_drink"
+            android:textSize="20dp"/>
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100% fruit drink"
+            android:id="@+id/fruit_drink"
+            android:textSize="20dp"/>
+    </LinearLayout>
+
+
+    <RelativeLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="86dp"
-        android:layout_gravity="center_horizontal">
+        android:layout_height="52dp"
+        android:layout_gravity="bottom">
 
         <Button
             android:layout_width="wrap_content"
@@ -36,7 +61,9 @@
             android:layout_height="match_parent"
             android:text="Upload"
             android:id="@+id/upload_data"
-            android:layout_gravity="bottom" />
-    </LinearLayout>
+            android:layout_gravity="bottom"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 
 </LinearLayout>
