--- a/demo/src/main/res/layout/activity_community_details.xml
+++ b/demo/src/main/res/layout/activity_community_details.xml
@@ -15,6 +15,20 @@
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <include layout="@layout/cardview_community_details"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/cardview_community_details"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="72dp" />
+
+    </FrameLayout>
 
 </LinearLayout>
