--- a/demo/src/main/res/layout/cardview_community_details.xml
+++ b/demo/src/main/res/layout/cardview_community_details.xml
@@ -3,7 +3,7 @@
 
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cardview"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="3dp"
