--- a/demo/src/main/res/layout/activity_confirm_page.xml
+++ b/demo/src/main/res/layout/activity_confirm_page.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,18 +8,14 @@
     tools:context="edu.gatech.cdcproject.demo.foodidentify.confirm_page"
     android:weightSum="1">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <TextView
+
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:id="@+id/textView"
-        android:layout_weight="1" />
+        android:layout_height="415dp"
+        android:scrollbars="vertical"
+        android:id="@+id/result_view"
+        android:layout_gravity="center_horizontal" />
 
     <LinearLayout
         android:orientation="vertical"
@@ -33,21 +28,21 @@
             android:layout_height="wrap_content"
             android:text="Fruits and veggies"
             android:id="@+id/fruit_and_veggie"
-            android:textSize="20dp" />
+            android:textSize="15dp" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sweet drink"
             android:id="@+id/sweet_drink"
-            android:textSize="20dp"/>
+            android:textSize="15dp"/>
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100% fruit drink"
             android:id="@+id/fruit_drink"
-            android:textSize="20dp"/>
+            android:textSize="15dp"/>
     </LinearLayout>
 
 
