--- a/demo/src/main/res/layout/fragment_health_record.xml
+++ b/demo/src/main/res/layout/fragment_health_record.xml
@@ -1,31 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/get_record"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is Health Record Fragment. "/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Health Record"
-        android:id="@+id/button_0" />
-
-    <Switch
-        android:layout_width="169dp"
-        android:layout_height="wrap_content"
-        android:text="Activity Level"
-        android:id="@+id/switch1"
-        android:layout_gravity="right"
-        android:layout_weight="0.06" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Upload PA"
-        android:id="@+id/button" />
-
-</LinearLayout>
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:text="New Text"
+        android:id="@+id/return_record"
+        android:layout_below="@+id/button"
+        android:layout_toEndOf="@+id/button"
+        android:layout_marginTop="154dp" />
+</RelativeLayout>
