--- a/demo/src/main/res/layout/activity_settings.xml
+++ b/demo/src/main/res/layout/activity_settings.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    android:background="?colorPrimary"
+    android:background="@drawable/fruitpic3"
     tools:context=".settings.SettingsActivity">
 
     <android.support.v7.widget.Toolbar
@@ -14,20 +14,22 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is Settings &amp; Log In"/>
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="0dp" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="Username"
         android:ems="10"
-        android:id="@+id/usernameText" />
+        android:id="@+id/usernameText"
+        android:layout_marginLeft="0dp"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="match_parent"
@@ -35,7 +37,11 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/passwordText"
-        android:editable="false" />
+        android:editable="false"
+        android:layout_marginLeft="0dp"
+        android:layout_below="@+id/usernameText"
+        android:layout_alignParentStart="true"
+        android:text="xxxxxx" />
 
     <Button
         android:layout_width="wrap_content"
@@ -43,5 +49,9 @@
         android:text="Log in"
         android:id="@+id/loginBt"
         android:clickable="true"
-        android:onClick="myLogin" />
-</LinearLayout>
+        android:onClick="myLogin"
+        android:layout_marginLeft="0dp"
+        android:layout_below="@+id/passwordText"
+        android:layout_alignParentEnd="true" />
+
+</RelativeLayout>
