--- a/demo/src/main/res/layout/fragment_health_record.xml
+++ b/demo/src/main/res/layout/fragment_health_record.xml
@@ -9,8 +9,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Retrieve"
         android:id="@+id/get_record"
+        android:layout_marginTop="195dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 
@@ -19,5 +20,16 @@
         android:layout_height="500dp"
         android:text="New Text"
         android:id="@+id/return_record"
-        android:layout_marginTop="154dp" />
+        android:layout_toEndOf="@+id/get_record"
+        android:layout_alignTop="@+id/get_record" />
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinner"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="155dp"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/get_record"
+        android:spinnerMode="dropdown" />
 </RelativeLayout>
