--- a/demo/src/main/res/layout/fragment_health_record.xml
+++ b/demo/src/main/res/layout/fragment_health_record.xml
@@ -12,13 +12,16 @@
         android:text="Retrieve"
         android:id="@+id/get_record"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="170dp" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
         android:text="New Text"
         android:id="@+id/return_record"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/get_record"
         android:layout_alignTop="@+id/get_record" />
 
