--- a/demo/src/main/res/layout/fragment_health_record.xml
+++ b/demo/src/main/res/layout/fragment_health_record.xml
@@ -23,6 +23,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/get_record"
-        android:layout_alignTop="@+id/get_record" />
+        android:layout_alignTop="@+id/get_record"
+        android:scrollbars="vertical"
+        android:fadeScrollbars="false"/>
 
 </RelativeLayout>
