--- a/demo/src/main/res/layout/fragment_food_identify.xml
+++ b/demo/src/main/res/layout/fragment_food_identify.xml
@@ -10,14 +10,14 @@
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="300dp"
         android:scaleType="centerCrop" />
 
 
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="280dp"
+        android:layout_height="160dp"
         android:scrollbars="vertical"
         android:id="@+id/button_view"
         android:layout_gravity="center_horizontal" />
@@ -25,45 +25,37 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center"
         android:layout_gravity="center_horizontal"
         >
-        <Button
+        <ImageButton
             android:id="@+id/select_button"
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:background="#3d88ec"
-            android:text="SELECT_IMAGE"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:scaleType="fitCenter"
 
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_weight="1"
-            />
+            android:src="@drawable/gallery" />
 
-        <Button
+        <ImageButton
             android:id="@+id/popup_menu"
-            android:layout_width="71dp"
-            android:layout_height="match_parent"
-            android:background="#3d88ec"
-            android:text="ENTER TEXT"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_weight="1" />
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/enter_text" />
 
-        <Button
+        <ImageButton
             android:id="@+id/camera_button"
-            android:layout_width="80dp"
-            android:layout_height="match_parent"
-            android:background="#3d88ec"
-            android:text="TAKE PIC"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_weight="1"
-            />
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/camera" />
 
-        <Button
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            android:text="Confirm"
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/confirm_button"
-            android:background="#3d88ec"
-            android:layout_gravity="bottom|center_horizontal"
-            android:layout_weight="1" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/confirm" />
     </LinearLayout>
 </LinearLayout>
