--- a/demo/src/main/res/layout/activity_bmi.xml
+++ b/demo/src/main/res/layout/activity_bmi.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -29,8 +28,7 @@
         android:id="@+id/input_height"
         android:layout_below="@+id/input_weight"
         android:layout_alignStart="@+id/input_weight"
-        android:layout_marginTop="70dp"
-        android:imeOptions="actionDone"/>
+        android:layout_marginTop="70dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -52,33 +50,12 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="44dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enter"
-        android:background="#3d88ec"
-        android:id="@+id/calculate"
-        android:layout_marginEnd="17dp"
-        android:layout_marginTop="43dp"
-        android:layout_below="@+id/input_height"
-        android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:id="@+id/result"
-        android:layout_below="@+id/calculate"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="37dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
 
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/weight_spinner"
-        android:layout_alignEnd="@+id/result"
         android:layout_toEndOf="@+id/input_weight"
         android:layout_alignBottom="@+id/weight"
         android:layout_alignStart="@+id/height_spinner" />
@@ -90,6 +67,50 @@
         android:layout_alignBottom="@+id/height"
         android:layout_alignParentEnd="true"
         android:layout_toEndOf="@+id/input_height"
-        android:layout_below="@+id/input_weight"
-        android:layout_alignStart="@+id/calculate" />
+        android:layout_below="@+id/input_weight"/>
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:text=""
+        android:gravity="center"
+        android:id="@+id/result"
+        android:layout_below="@+id/input_height"
+        android:layout_alignParentEnd="true" />
+
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center_horizontal"
+        android:layout_below="@+id/result"
+        android:layout_alignEnd="@+id/result"
+        android:layout_alignParentBottom="true">
+
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/upload"
+            android:scaleType="fitCenter"
+            android:id="@+id/upload"
+            android:gravity="center_horizontal"
+            android:layout_gravity="bottom"/>
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="Enter"
+            android:scaleType="fitCenter"
+            android:id="@+id/calculate"
+            android:gravity="center_horizontal"
+            android:layout_gravity="bottom"
+            android:src="@drawable/confirm" />
+
+
+    </LinearLayout>
+
 </RelativeLayout>
