--- a/demo/src/main/res/layout/activity_confirm_page.xml
+++ b/demo/src/main/res/layout/activity_confirm_page.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/white"
     tools:context="edu.gatech.cdcproject.demo.foodidentify.confirm_page"
     android:weightSum="1">
 
