--- a/demo/src/main/res/layout/activity_about.xml
+++ b/demo/src/main/res/layout/activity_about.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    android:background="?colorPrimary"
+    android:background="@color/white"
     tools:context=".about.AboutActivity">
 
     <android.support.v7.widget.Toolbar
