--- a/demo/src/main/res/layout/activity_bmi.xml
+++ b/demo/src/main/res/layout/activity_bmi.xml
@@ -7,7 +7,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/white"
-    tools:context=".BMI">
+    tools:context=".BMI"
+    android:fitsSystemWindows="true"
+    >
 
     <EditText
 
