--- a/demo/src/main/res/layout/activity_settings_2.xml
+++ b/demo/src/main/res/layout/activity_settings_2.xml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
     android:layout_height="match_parent">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme.PopupOverlay"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="0dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="0dp" />
 
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:id="@+id/imageView"
-        android:src="@android:drawable/ic_menu_crop" />
+        android:src="@android:drawable/ic_menu_crop"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -16,16 +33,18 @@
         android:id="@+id/button"
         android:layout_below="@+id/imageView"
         android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/imageView" />
+        android:layout_alignEnd="@+id/imageView"
+        android:clickable="true"
+        android:onClick="myLogout" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Show health info"
         android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/toolbar"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_toEndOf="@+id/imageView" />
 
 </RelativeLayout>
