--- a/demo/src/main/res/layout/activity_bmi.xml
+++ b/demo/src/main/res/layout/activity_bmi.xml
@@ -124,6 +124,13 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar2"
+        android:layout_alignTop="@+id/result"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
