--- a/demo/src/main/res/layout/activity_bmi.xml
+++ b/demo/src/main/res/layout/activity_bmi.xml
@@ -131,7 +131,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/progressBar2"
         android:layout_alignTop="@+id/result"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
 
 
 </RelativeLayout>
