--- a/demo/src/main/res/layout/fragment_health_record.xml
+++ b/demo/src/main/res/layout/fragment_health_record.xml
@@ -1,32 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/white"
-    android:weightSum="1">
+    android:fitsSystemWindows="true">
 
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Retrieve"
-        android:id="@+id/get_record"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:text="New Text"
-        android:id="@+id/return_record"
-        android:scrollbars="vertical"
-        android:fadeScrollbars="false"
-        android:layout_alignStart="@+id/imageView2"
-        android:layout_above="@+id/get_record"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textView3" />
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/line_graph"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentEnd="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -53,36 +45,46 @@
         android:text="Upload"
         android:id="@+id/Upload"
         android:layout_below="@+id/editText"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentEnd="true" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Physicial Activity: \n                                      Time                           Level"
+        android:text="Physicial Activity:\nTime(min)                           Level"
         android:id="@+id/textView2"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignEnd="@+id/spinner"
-        android:textSize="@dimen/abc_text_size_medium_material" />
+        android:textSize="20dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Physicial Activity History"
         android:id="@+id/textView3"
-        android:textSize="@dimen/abc_text_size_medium_material"
+        android:textSize="20dp"
+        android:layout_below="@+id/imageView2"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentEnd="true" />
 
-    <ImageView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Retrieve"
+        android:id="@+id/get_record"
+        android:gravity="bottom"
+        android:layout_below="@+id/graph"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:id="@+id/imageView2"
         android:background="@drawable/healthfood1"
         android:layout_below="@+id/Upload"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/textView3" />
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
